--- a/src/style.css
+++ b/src/style.css
@@ -12,8 +12,26 @@ body
 
 .webgl
 {
-    position: fixed;
+    /* position: absolute;
     top: 0;
-    left: 0;
+    left: 0; */
     outline: none;
+}
+
+.board{
+    position: fixed;
+    display: grid;
+    background: white;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+    grid-template-columns: repeat(3, 1fr);
+    left: 10px;
+    top: 10px;
+}
+
+.design {
+    
+    width: 50px;
+    height: 50px;
 }
